# PsiVox

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WhisperQtApp  cmake_install.cmake  compile_commands.json
WhisperQtApp_autogen/: deps  moc_predefs.h
WhisperQtApp_autogen/include/: main.moc  main.moc.d
autogenerated/: ggml-metal-embed.s
src/: main.cpp
whisper_build/: Makefile  cmake_install.cmake  whisper-config.cmake
whisper_build/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake  ggml-version.cmake
whisper_build/ggml/src/: Makefile  cmake_install.cmake  libggml-base.dylib  libggml-cpu.dylib  libggml.dylib
whisper_build/ggml/src/ggml-base_autogen/: deps  moc_predefs.h
whisper_build/ggml/src/ggml-blas/: Makefile  cmake_install.cmake  libggml-blas.dylib
whisper_build/ggml/src/ggml-blas/ggml-blas_autogen/: deps  moc_predefs.h
whisper_build/ggml/src/ggml-cpu/: Makefile  cmake_install.cmake
whisper_build/ggml/src/ggml-cpu_autogen/: deps  moc_predefs.h
whisper_build/ggml/src/ggml-metal/: Makefile  cmake_install.cmake  libggml-metal.dylib
whisper_build/ggml/src/ggml-metal/ggml-metal_autogen/: deps  moc_predefs.h
whisper_build/ggml/src/ggml_autogen/: deps  moc_predefs.h
whisper_build/src/: Makefile  cmake_install.cmake  libwhisper.1.7.4.dylib
whisper_build/src/whisper_autogen/: deps  moc_predefs.h
